# tract-reference-renderer

./: .gitignore  LICENSE  NOTICE.md  README.md  RELEASE.md  UPSTREAM_PROVENANCE.md  pyproject.toml
scripts/: build_release_package.py  smoke_render.py  smoke_ws_client.py  start_renderer.ps1
src/tract_reference_renderer/: __main__.py  drag_solver.py  mesh3d.py  protocol.py  renderer.py  server.py
src/tract_reference_renderer/utils/: geometry.py  splines.py
src/tract_reference_renderer/vocal_tract/: anatomy_geometry.py  geometry.py
src/vtl_renderer/: __init__.py  server.py  types.py
src/vtl_renderer/vocal_tract/: dynamic_geometry.py  params.py
