[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tract-reference-renderer"
version = "0.1.0"
description = "Standalone local reference renderer service for tract SVG rendering."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",
    "websockets>=12,<16",
]

[project.scripts]
tract-reference-renderer = "tract_reference_renderer.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
